# RoverProject

./: .env  .gitignore  README.md  requirements.txt
arduino_sketches/: README.md
arduino_sketches/I2C_Arduino_Driver/: I2C_Arduino_Driver.ino
arduino_sketches/I2C_MCP_Motor_Controller/: I2C_MCP_Motor_Controller.ino
arduino_sketches/i2c_interface/: i2c_interface.ino
src/: .rosinstall
src/drive_train/: CMakeLists.txt  package.xml  setup.py
src/rover_client/: CMakeLists.txt  package.xml
src/rover_client/launch/: controller_service_test.launch  controller_sim_xbox.launch  controller_xbox.launch
src/rover_client/nodes/: ClientNetworkComms  ControllerNode  ControllerPublisher  ControllerPublisher.cpp  ControllerPublisherPy  README.md
src/rover_client/nodes/gui/: README.md
src/rover_client/nodes/services/: ControllerService
src/rover_client/other/: PS3 Key Map.txt
src/rover_client/scripts/: ControllerServiceTester  ControllerTester.cpp  ControllerTopicTester  README.md
src/rover_client/src/: README.md
src/rover_client/src/control/: ControllerTester.py  ControllerUpdater.py
src/rover_client/src/control/controllers/: SimulatedXbox.py  Xbox.py
src/rover_client/srv/: ControlService.srv
src/rover_main/: CMakeLists.txt  package.xml
src/rover_main/launch/: README.md  drive.launch  gps_driver.launch  motor_driver.launch
src/rover_main/msg/: Vector3.msg  controllerMap.msg  ps3_control.msg
src/rover_main/nodes/: Drive_Train_Controller  Rover_Controller_Drive  Rover_Network_Comms  TeleopController
src/rover_main/nodes/services/: DriveTrainController  GPSService  I2CService  I2C_Service  README.md  RoverStatusService
src/rover_main/scripts/: I2C_Service_Tester
src/rover_main/scripts/communication/: I2C_Service_Test
src/rover_main/src/: README.md  controller_math.py
src/rover_main/src/communication/:  I2C_Register_Enum.py  I2C_Communication.py  __init__.py
src/rover_main/src/communication/I2C/: Adafruit_PWM_Driver.py  General_I2C_Communication.py
src/rover_main/src/motor_controllers/: MCP.py
src/rover_main/src/rover_management/: RoverStateManager.py
src/rover_main/srv/: DriveTrainService.srv  GPS_Service.srv  I2C_Service.srv  RobotStatus.srv  i2c_comms.srv
(+3 files in other folders)
